feat: 1차 커밋 기본환경 구현 중 #2